updated main figures

--- a/06-publication/main_figures/Figure_XX1/Figure_XX1_metadata.Rmd
+++ b/06-publication/main_figures/Figure_XX1/Figure_XX1_metadata.Rmd
@@ -35,7 +35,7 @@ smpd <- full_metadata %>%
   ggplot(., aes(x = Pipenotch, y = Age, fill = Peridontal_affect_score, shape = Sex, size = `%AMTL`)) +
     ggpointgrid::geom_pointrect(scale_x = 0.10, scale_y = 0.22, color = "black", stroke = 0.5) +
     theme_minimal(base_size = 14) +
-    scale_size_continuous(range = c(2,8)) +
+    scale_size_continuous(range = c(2,6)) +
     scale_shape_manual(values = c(21, 23, 22)) +
     scale_fill_gradient(low = "blue", high = "red") +
     # scale_color_manual(values = microshades_palette("micro_green")) +
@@ -45,7 +45,7 @@ smpd <- full_metadata %>%
 smpd
 
 ggsave("./06-publication/main_figures/Figure_XX1/smpd.pdf", plot = smpd, device = "pdf",
-       scale = 1, width = 10, height = 7, units = c("in"), dpi = 300)
+       scale = 1, width = 8, height = 5, units = c("in"), dpi = 300)
 
 ```
 
@@ -64,8 +64,8 @@ smc <- full_metadata %>%
     ylab("Age group")
 smc
 
-ggsave("./06-publication/main_figures/Figure_XX1/smc.pdf", plot = smc, device = "pdf",
-       scale = 1, width = 10, height = 7, units = c("in"), dpi = 300)
+# ggsave("./06-publication/main_figures/Figure_XX1/smc.pdf", plot = smc, device = "pdf",
+#        scale = 1, width = 10, height = 7, units = c("in"), dpi = 300)
 
 ```
 
@@ -85,7 +85,7 @@ smcs <- full_metadata %>%
 smcs
 
 ggsave("./06-publication/main_figures/Figure_XX1/smcs.pdf", plot = smcs, device = "pdf",
-       scale = 1, width = 10, height = 7, units = c("in"), dpi = 300)
+       scale = 1, width = 8, height = 5, units = c("in"), dpi = 300)
 
 ```
 
