--- a/06-publication/supplemental_figures/SXX6/Supp_Figure_XX6.Rmd
+++ b/06-publication/supplemental_figures/SXX6/Supp_Figure_XX6.Rmd
@@ -28,107 +28,6 @@ notebook itself.
 knitr::opts_knit$set(root.dir = normalizePath("../../../"))
 ```
 
-
-##Cumulative Percent Decay Curves
-```{r load_data}
-# read in the species table
-mid_raw <- fread("./05-results.backup/MID_malt_bactarchhomo2018_comparison-species.txt")
-radcliffe_raw <- fread("./05-results.backup/Radcliffe_pfuT_comparison-species.txt")
-kilteasheen_raw <- fread("./05-results.backup/Kilteasheen_comparison-species.txt")
-iberian_raw <- fread("./05-results.backup/iberian_medieval_malt_species_raw.tsv")
-mod_raw <- fread("./05-results.backup/mod_malt_species_raw.tsv")
-
-
-all_raw <- mid_raw %>%
-  full_join(., radcliffe_raw) %>%
-  full_join(., kilteasheen_raw) %>%
-  full_join(., iberian_raw) %>%
-  full_join(., mod_raw)
-
-
-# clean the file names
-all_raw <- rename(all_raw, Species = `#Datasets`)
-colnames(all_raw) <- gsub(".unmapped","", colnames(all_raw))
-colnames(all_raw) <- gsub("MeganServer::","", colnames(all_raw))
-
-# remove human and unassigned reads, convert NA to 0, and remove the 8 MID samples with no metadata
-all_raw <- all_raw %>% 
-  filter(!str_detect(Species, "Homo sapiens|Not assigned")) %>%
-  replace(is.na(.), 0) %>%
-  # these samples have no metadata
-  select(-c("MID025.A0101","MID033.A0101","MID052.A0101","MID056.A0101","MID065.A0101","MID068.A0101","MID076.A0101","MID078.A0101")) %>%
-  arrange(Species)
-
-
-```
-
-Load metadata
-```{r load_metadata}
-
-metadata <- fread("00-documentation.backup/MID_analysis_metadata.tsv") %>%
-  select(Site_code, Library_ID) %>%
-  full_join(., fread("./00-documentation.backup/radcliffe_pfuT_metadata.tsv") %>%
-            select(Site_code, Library_ID)) %>%
-  full_join(., fread("./00-documentation.backup/kilteasheen_metadata.tsv") %>%
-            select(Site_code, Library_ID)) %>%
-  full_join(., fread("./00-documentation.backup/iberian_medieval_metadata.tsv") %>%
-            select(Site_code, Library_ID)) %>%
-  full_join(., fread("./00-documentation.backup/mod_metadata.tsv") %>%
-            select(Site_code, Library_ID))
-
-#set the columns of interest to factors
-metadata <- metadata %>%
-  as_tibble() %>%
-  mutate(Site_code = fct_relevel(Site_code, "MID","CMB","RAD","KIL","ELR",
-                                "IVE","JAE","VLC","EXB","LIB"))
-
-```
-
-Use the example database
-```{r set_database}
-# load the example database
-example_database <- system.file("extdata",
-                                "example_database.tsv",
-                                package = "cuperdec")
-
-# convert the example database to a tibble
-database <- load_database(example_database, target = "oral") # %>% print()
-
-```
-
-```{r taxatable}
-
-taxatable <- load_taxa_table(all_raw) # %>% print()
-
-```
-
-```{r metamap}
-metadata_map <- load_map(metadata,
-                     sample_col = "Library_ID",
-                     source_col = "Site_code") # %>% print()
-
-```
-
-```{r simple_curve}
-curves <- calculate_curve(taxatable, database = database) %>%
-  print()
-
-```
-
-```{r hard_rank_burnin}
-
-rank_burnin_result <- hard_burnin_filter(curves, percent_threshold = 50, rank_burnin = 0.7) # percent_threshold = 50, rank_burnin = 0.7 allows only the highest ExtractionBlank line to turn turquoise, and the 2 library samples that really look like samples stay turquoise
-# plot_cuperdec(curves, metadata_map, rank_burnin_result)
-
-# restrict the plot to only the 1st 250 taxa
-cd_curve_plot <- plot_cuperdec(curves, metadata_map, rank_burnin_result, restrict_x = 75)
-cd_curve_plot
-
-# ggsave("~/Desktop/MID_cuperdec_rank7_pct50.pdf", plot = cd_curve_plot, device = "pdf",
-#        scale = 1, width = 7, height = 5, units = c("in"), dpi = 300)
-
-```
-
 ##SourceTracker
 
 ```{r load_data}
@@ -206,184 +105,12 @@ st_full_plot_all <- full_source_results %>%
          ggtitle("Full sources")
 st_full_plot_all
 
-# ggsave("./06-publication/supplemental_figures/SXX2/st_full_plot_all.pdf", plot = st_full_plot_all, device = "pdf",
+# ggsave("./06-publication/supplemental_figures/SXX6/st_full_plot_all.pdf", plot = st_full_plot_all, device = "pdf",
+#        scale = 1, width = 16, height = 5, units = c("in"), dpi = 300)
+
+# ggsave("./06-publication/supplemental_figures/SXX6/st_full_plot_all.png", plot = st_full_plot_all, device = "png",
 #        scale = 1, width = 16, height = 5, units = c("in"), dpi = 300)
 
 ```
-
-
-What if we look at only the MID and CMB samples, and we order them by the PCA
-PC1 order?
-```{r}
-# prep the table
-
-outliers <- c("EXB059.A2501","LIB058.A0103","LIB058.A0106","CSS","CSD")
-poor_samples <- fread("./05-results.backup/cuperdec_poor_samples.tsv") %>%
-  pull(Sample)
-
-malt_otu_pca_table <- all_species_decontam_prev %>%
-  select(matches("Species|MID|CMB")) %>%
-  select(-one_of(outliers)) %>%
-  select(-one_of(poor_samples)) %>%
-  gather("Library_ID","Counts",2:ncol(.)) %>%
-  mutate(Counts = Counts + 1) %>%
-  spread(Species, Counts) %>%
-  column_to_rownames("Library_ID")
-
-# perform a PCA to see how the data cluster
-malt_otu.pca <- mixOmics::pca(malt_otu_pca_table, ncomp = 2, logratio = 'CLR')
-malt_pca_values <- malt_otu.pca$variates$X %>%
-  as.data.frame() %>%
-  rownames_to_column("Library_ID") %>%
-  inner_join(., full_metadata, by = "Library_ID")
-
-mid_pc1_sample_order <- malt_pca_values %>%
-  arrange(PC1) %>%
-  pull(Library_ID)
-
-horseshoe <- ggplot(malt_pca_values, aes(PC1, PC2, color = Site_code, shape = Site_code)) +
-  geom_point(size = 3) +
-  theme_minimal() +
-  scale_color_manual(values = Site_code_colors) +
-  xlab(paste("PC1 - ", 100*(round(malt_otu.pca$prop_expl_var$X[1], 2)), "%", sep = "")) +
-  ylab(paste("PC2 - ", 100*(round(malt_otu.pca$prop_expl_var$X[2], 2)), "%", sep = "")) +
-  theme(legend.position = "top")
-horseshoe
-
-# ggsave("./06-publication/supplemental_figures/SXX2/horseshoe.pdf", plot = horseshoe, device = "pdf",
-#        scale = 1, width = 9.5, height = 5, units = c("in"), dpi = 300)
-
-```
-
-
-```{r}
-mid_ST_ordered <- full_source_results %>%
-  filter(str_detect(SampleID, "MID|CMB")) %>%
-  filter(!str_detect(SampleID, outliers %>% str_c(collapse = "|"))) %>%
-  filter(!str_detect(SampleID, poor_samples %>% str_c(collapse = "|"))) %>%
-  gather("Sources", "Percent",2:ncol(.)) %>%
-  mutate(Percent = Percent * 100) %>%
-  mutate(Sources = fct_relevel(Sources, "Unknown","boneARS","sediment","skin","urbanGut","ruralGut","subPlaque","supPlaque","modernCalculus"),
-         SampleID = fct_relevel(SampleID, mid_pc1_sample_order)) %>%
-  ggplot(., aes(x = SampleID, y = Percent, fill = Sources)) +
-         geom_bar(stat = "identity") + # , color = "black"
-         theme_minimal(base_size = 14) +
-         scale_fill_manual(values = full_colors) +
-         theme(axis.text.x = element_text(angle = 90, hjust = 1),
-               axis.text = element_text(size = 8)) +
-         # scale_y_continuous(breaks=scales::pretty_breaks(n=6)) +
-         ylab("% attributed to source") +
-         theme(legend.position = "top")
-mid_ST_ordered
-
-# ggsave("./06-publication/supplemental_figures/SXX2/mid_ST_ordered.pdf", plot = mid_ST_ordered, device = "pdf",
-#        scale = 1, width = 9.5, height = 5, units = c("in"), dpi = 300)
-
-```
-
-## Heat maps
-Abundance filter the data for plotting the heatmap to see just the horseshoe w/o the empty center cells
-```{r}
-malt_otu_filt_pca_table <- all_species_decontam_prev %>%
-  select(matches("Species|MID|CMB")) %>%
-  select(-one_of(outliers)) %>%
-  select(-one_of(poor_samples)) %>%
-  adorn_totals(where = "col", name = "Sum_species") %>%
-  mutate(Percent = Sum_species/sum(Sum_species)*100) %>%
-  filter(Percent > 0.001) %>%
-  gather("Library_ID","Counts",2:ncol(.)) %>%
-  mutate(Counts = Counts + 1) %>%
-  spread(Species, Counts) %>%
-  column_to_rownames("Library_ID")
-
-# look at the screenplot to decide how many components to keep for the PCA -> will keep all but 2
-mixOmics::tune.pca(malt_otu_filt_pca_table, logratio = 'CLR')
-# perform a PCA to see how the data cluster
-malt_otu_filt.pca <- mixOmics::pca(malt_otu_filt_pca_table, ncomp = 2, logratio = 'CLR')
-malt_filt_pca_values <- malt_otu_filt.pca$variates$X %>%
-  as.data.frame() %>%
-  rownames_to_column("Library_ID") %>%
-  inner_join(., full_metadata, by = "Library_ID")
-
-```
-
-```{r}
-
-# plot with the species ordered by loading in PC1
-# Plot the heatmap with samples ordered by the loading in PC1 from above
-# make the Library_IDs a factor so they're in the correct order for the heatmap using the vector from the step above
-
-
-# sample_order <- malt_filt_pca_values %>%
-#   arrange(PC1) %>%
-#   pull(Library_ID)
-
-species_filt_order <- malt_otu_filt.pca$loadings$X %>%
-  as.data.frame() %>%
-  rownames_to_column("Species") %>%
-  arrange(desc(PC1)) %>%
-  filter(!between(PC1, -0.01, 0.01)) %>%
-  pull(Species)
-
-# re-define Region_colors so we don't have the additional regions as factors to deal with later
-Region_colors = c("#311068","#E95562")
-
-# CLR-transform the matrix for plotting the heatmap
-malt_otu_filt_pca_table_clr <- clr(malt_otu_filt_pca_table) # malt_otu_filt_pca_table_filt
-malt_otu_filt_pca_table_clr <- as.matrix(malt_otu_filt_pca_table_clr)
-
-malt_otu_filt_pca_table_clr_long <- malt_otu_filt_pca_table_clr %>%
-  as.data.frame() %>%
-  rownames_to_column("Library_ID") %>%
-  gather("Species","CLR",2:ncol(.)) %>%
-  spread(Library_ID,CLR) %>%
-  filter(Species %in% species_filt_order) %>%
-  mutate(Species = fct_relevel(Species, species_filt_order)) %>%
-  arrange(Species) %>%
-  gather("Library_ID","CLR", 2:ncol(.)) %>%
-  inner_join(., full_metadata %>%
-               select(Library_ID, Region), by = "Library_ID") %>%
-  inner_join(., Region_colors %>%
-               as_data_frame(.) %>%
-               rename(Color = value) %>%
-               mutate(Region = c("Netherlands","Spain")), by = "Region") %>%
-  mutate(Library_ID = fct_relevel(Library_ID,  mid_pc1_sample_order)) %>% # malt_otu_filt_pca_table_clr_smp_order for cluster order
-  arrange(Library_ID)
-
-vector_color = malt_otu_filt_pca_table_clr_long %>%
-  select(Library_ID, Color) %>%
-  unique %>%
-  pull(Color) %>%
-  as.character()
-
-# make a heatmap with ggplot
-heatmap_base <- ggplot(malt_otu_filt_pca_table_clr_long, aes(Species, Library_ID, fill = CLR)) +
-  geom_tile() +
-  scale_fill_viridis_c(option = "A") +
-  theme_minimal(base_size = 7) +
-  theme(axis.text.x = element_text(angle = 90, hjust = 1), # , color = vector_color
-        plot.margin = margin(0, 0, 0, 0, "pt"),
-        axis.title.y = element_blank(),
-        legend.position = "left")
-
-heatmap_base
-
-# ggsave("./06-publication/supplemental_figures/SXX2/heatmap_ordered.pdf", plot = heatmap_base, device = "pdf",
-#        scale = 1, width = 20, height = 9.5, units = c("in"), dpi = 300)
-
-```
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
