--- a/02-scripts.backup/MID_mpa3_betadiv.Rmd
+++ b/02-scripts.backup/MID_mpa3_betadiv.Rmd
@@ -682,7 +682,7 @@ nomethano_bi
 
 no_methano <- plot_grid(nomethano_beta, nomethano_gc, nomethano_bi,
           ncol = 1, labels = c("A", "B","C"), rel_widths = c(1), scale = 0.95)
-no_methano
+
 
 # ggsave("./06-publication/supplemental_figures/SXX5/no_methano.pdf", plot = no_methano,
 #        device = "pdf", scale = 1, width = 6, height = 12, units = c("in"), dpi = 300)
@@ -827,7 +827,8 @@ mpa3_all_otu.pca <- mixOmics::pca(mpa3_species_decontam_unfilt, ncomp = 2, logra
 mpa3_all_pca_values <- mpa3_all_otu.pca$variates$X %>%
   as.data.frame() %>%
   rownames_to_column("Library_ID") %>%
-  inner_join(., full_metadata, by = "Library_ID")
+  inner_join(., full_metadata, by = "Library_ID") %>%
+  left_join(., strep_group_info, by = "Library_ID")
 
 # ggplot(mpa3_all_pca_values, aes(PC1, PC2, color = Site_code, shape = Time_period)) +
 #   geom_point(size = 2) +
@@ -837,7 +838,12 @@ mpa3_all_pca_values <- mpa3_all_otu.pca$variates$X %>%
 #      theme(legend.position = "top")
 
 plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2","Time_period","Time_period", 3) 
-plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2","Site_code","Time_period", 3) 
+site_code_beta <- plot_pca(mpa3_species_decontam_unfilt, "PC1", "PC2","Site_code","Time_period", 3) 
+site_code_beta
+
+# ggsave("./06-publication/supplemental_figures/SXX8/site_code_beta.pdf", plot = site_code_beta, device = "pdf",
+#        scale = 1, width = 6, height = 5, units = c("in"), dpi = 300)
+
 
 # check if the Radliffe samples separate by characteristics of the calculus deposits, Deposit_density, Deposit_location, Deposit_spread
 ggplot(mpa3_all_pca_values, aes(PC1, PC2, color = Deposit_spread, shape = Region)) +
@@ -850,8 +856,6 @@ ggplot(mpa3_all_pca_values, aes(PC1, PC2, color = Deposit_spread, shape = Region
 # by sequencing depth 
 mid_seqdepth_pc12 <- plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "No_reads_total", "Site_code", 3, "Total reads into MetaPhlAn3")
 mid_seqdepth_pc12
-# ggsave("~/Desktop/MID_pca_mid_seqdepth_pc12.pdf", plot = mid_seqdepth_pc12, device = "pdf",
-#        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by average GC content
 plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "gc_avg", "Time_period", 3, "Avg. GC content (%)")
@@ -859,7 +863,216 @@ plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "gc_avg", "Time_period
 # by average read length
 plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "seq_len_avg", "Time_period", 3, "Avg. read length (bp)")
 
+# by Strep group proportion - sanguinis
+plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "sanguinis", "Time_period", 3, "Proportion of Sanguinis group")
+
+# by Strep group proportion - mitis
+plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "mitis", "Time_period", 3, "Proportion of Sanguinis group")
+
+# by average read length
+rl <- plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "seq_len_avg", "Time_period", 3, "Avg. read length (bp)")
+rl
+
 ```
+
+```{r}
+# load the MALT RefSeq taxonomy tables that have been decontaminated 
+# and the column headers are cleaned up
+# this is to get the Strep groups for coloring the PCA plot
+load("./05-results.backup/Taxonomy_tables.RData")
+
+# list poor samples from cuperdec
+poor_samples_rs <- fread("./05-results.backup/cuperdec_poor_samples.tsv") %>%
+  rename(Library_ID = Sample) %>%
+  filter(str_detect(Library_ID, "MID")) %>%
+  pull(Library_ID)
+
+# we'll use the prevalence-filtered dataset
+malt_rs <- all_species_decontam_prev %>%
+  # select(matches("Species|MID|CMB")) %>%
+  adorn_totals(where = "col")  %>%
+  filter(Total >  0) %>%
+  select(-Total) %>%
+  select(-poor_samples_rs)
+
+strep_groups <- fread("./00-documentation.backup/dRep_strep_groups.tsv") %>%
+  # remove the extrac column with the old dRep
+  select(-Clade_Consensus) %>%
+  # make a factor for plotting
+  mutate(dRep = fct_relevel(dRep, "Sanguinis","Mitis","Salivarius","Anginosus","Bovis","Pyogenic","Mutans","Other_oral","Other","Unknown"))
+
+strep_rs <- malt_rs %>%
+  filter(str_detect(Species, "Streptococcus")) %>%
+  # join with the Strep grup table for plotting
+  inner_join(., strep_groups) %>%
+  select(Species, dRep, everything()) %>%
+  # convert to long-format
+  gather("Library_ID","Counts", 3:ncol(.)) %>%
+  # mutate(Library_ID = fct_relevel(Library_ID, sample_order_rs)) %>%
+  dplyr::group_by(Library_ID, dRep) %>%
+  summarize(Count_sum = sum(Counts)) %>%
+  ungroup() %>%
+  group_by(Library_ID) %>%
+  mutate(Percent = Count_sum / sum(Count_sum)) %>%
+  select(Library_ID, dRep, Percent) %>%
+  pivot_wider(names_from = dRep, values_from = Percent)
+
+mpa3_all_otu.pca <- mixOmics::pca(mpa3_species_decontam_unfilt, ncomp = 2, logratio = 'CLR')
+mpa3_all_pca_values_rs_strep <- mpa3_all_otu.pca$variates$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  inner_join(., full_metadata, by = "Library_ID") %>%
+  left_join(., strep_rs, by = "Library_ID")
+
+ggplot(mpa3_all_pca_values_rs_strep, aes(PC1, PC2, fill = Sanguinis, shape = Time_period)) +
+  geom_point(size = 2, color = "black") +
+     scale_fill_viridis_c(option = "C") +
+     scale_shape_manual(values = c(21, 24, 22, 23, 23)) +
+     # stat_ellipse() +
+     # xlab(paste(xaxis, " - ", exp_var_pc1)) +
+     # ylab(paste(yaxis, " - ", exp_var_pc2)) +
+     theme_minimal(base_size = 16) +
+     theme(text = element_text(size=16)) +
+     theme(legend.title = element_blank(),
+           legend.key.size = unit(2,"mm"),
+           legend.text = element_text(size = 6)) + 
+     theme(legend.position = "top") +
+     ggtitle("") + theme(plot.title = element_text(size = 10))
+
+ggplot(mpa3_all_pca_values_rs_strep, aes(PC1, PC2, fill = Anginosus, shape = Time_period)) +
+  geom_point(size = 2, color = "black") +
+     scale_fill_viridis_c(option = "C") +
+     scale_shape_manual(values = c(21, 24, 22, 23, 23)) +
+     # stat_ellipse() +
+     # xlab(paste(xaxis, " - ", exp_var_pc1)) +
+     # ylab(paste(yaxis, " - ", exp_var_pc2)) +
+     theme_minimal(base_size = 16) +
+     theme(text = element_text(size=16)) +
+     theme(legend.title = element_blank(),
+           legend.key.size = unit(2,"mm"),
+           legend.text = element_text(size = 6)) + 
+     theme(legend.position = "top") +
+     ggtitle("") + theme(plot.title = element_text(size = 10))
+
+ggplot(mpa3_all_pca_values_rs_strep, aes(PC1, PC2, fill = Anginosus, shape = Site_code)) +
+  geom_point(size = 2, color = "black") +
+     scale_fill_viridis_c(option = "C") +
+     scale_shape_manual(values = c(21, 24, 22, 23, 25,21, 24, 22, 23, 25)) +
+     # stat_ellipse() +
+     # xlab(paste(xaxis, " - ", exp_var_pc1)) +
+     # ylab(paste(yaxis, " - ", exp_var_pc2)) +
+     theme_minimal(base_size = 16) +
+     theme(text = element_text(size=16)) +
+     theme(legend.title = element_blank(),
+           legend.key.size = unit(2,"mm"),
+           legend.text = element_text(size = 6)) + 
+     theme(legend.position = "top") +
+     ggtitle("") + theme(plot.title = element_text(size = 10))
+
+
+
+```
+
+```{r}
+# select the species with strongest loadings in PC1 + and - directions
+pc1_mpa3 <- fread("./05-results.backup/mpa3_pc1_species_list.tsv") 
+
+pc1pws <- pc1_mpa3 %>%
+  filter(PC1 > 0) %>%
+  pull(Taxon)
+
+pc1neg <- pc1_mpa3 %>%
+  filter(PC1 < 0) %>%
+  pull(Taxon)
+
+pc_species_pws <- mpa3_species_decontam %>%
+  select(-one_of(outliers_mpa3)) %>%
+  select(-one_of(poor_samples_mpa3)) %>%
+  select(-matches("EXB|LIB|CSN|CSD|ARS|CSS|CSL")) %>%
+  filter(Species %in% pc1pws) %>%
+  # convert to long-format
+  pivot_longer(!Species, names_to = "Library_ID", values_to = "Counts") %>%
+  dplyr::group_by(Library_ID) %>%
+  summarize(Count_sum = sum(Counts)) %>%
+  ungroup() %>%
+  full_join(., mpa3_species_decontam %>%
+  select(-one_of(outliers_mpa3)) %>%
+  select(-one_of(poor_samples_mpa3)) %>%
+  select(-matches("EXB|LIB|CSN|CSD|ARS|CSS|CSL")) %>%
+              pivot_longer(!Species, names_to = "Library_ID", values_to = "Counts") %>%
+              dplyr::group_by(Library_ID) %>%
+              summarize(Total = sum(Counts)) %>%
+              select(Library_ID, Total)) %>%
+  mutate(Percent_pws = Count_sum / Total * 100) %>%
+  select(Library_ID, Percent_pws)
+
+pc_species_neg <- mpa3_species_decontam %>%
+  select(-one_of(outliers_mpa3)) %>%
+  select(-one_of(poor_samples_mpa3)) %>%
+  select(-matches("EXB|LIB|CSN|CSD|ARS|CSS|CSL")) %>%
+  filter(Species %in% pc1neg) %>%
+  # convert to long-format
+  pivot_longer(!Species, names_to = "Library_ID", values_to = "Counts") %>%
+  dplyr::group_by(Library_ID) %>%
+  summarize(Count_sum = sum(Counts)) %>%
+  ungroup() %>%
+  full_join(., mpa3_species_decontam %>%
+  select(-one_of(outliers_mpa3)) %>%
+  select(-one_of(poor_samples_mpa3)) %>%
+  select(-matches("EXB|LIB|CSN|CSD|ARS|CSS|CSL")) %>%
+              pivot_longer(!Species, names_to = "Library_ID", values_to = "Counts") %>%
+              dplyr::group_by(Library_ID) %>%
+              summarize(Total = sum(Counts)) %>%
+              select(Library_ID, Total)) %>%
+  mutate(Percent_neg = Count_sum / Total * 100) %>%
+  select(Library_ID, Percent_neg)
+
+mpa3_all_pca_values_rs_pc <- mpa3_all_otu.pca$variates$X %>%
+  as.data.frame() %>%
+  rownames_to_column("Library_ID") %>%
+  inner_join(., full_metadata, by = "Library_ID") %>%
+  left_join(., pc_species_pws, by = "Library_ID") %>%
+  left_join(., pc_species_neg, by = "Library_ID")
+
+pc1pws_plot <- ggplot(mpa3_all_pca_values_rs_pc, aes(PC1, PC2, fill = Percent_pws, shape = Time_period)) +
+  geom_point(size = 2, color = "black") +
+     scale_fill_viridis_c(option = "C") +
+     scale_shape_manual(values = c(21, 24, 22, 23, 23)) +
+     # stat_ellipse() +
+     # xlab(paste(xaxis, " - ", exp_var_pc1)) +
+     # ylab(paste(yaxis, " - ", exp_var_pc2)) +
+     theme_minimal(base_size = 16) +
+     theme(text = element_text(size=16)) +
+     theme(legend.title = element_blank(),
+           legend.key.size = unit(2,"mm"),
+           legend.text = element_text(size = 6)) + 
+     theme(legend.position = "top") +
+     ggtitle("") + theme(plot.title = element_text(size = 10))
+pc1pws_plot
+
+# ggsave("./06-publication/supplemental_figures/SXX8/pc1pws_plot.pdf", plot = pc1pws_plot,
+#        device = "pdf", scale = 1, width = 6, height = 5, units = c("in"), dpi = 300)
+
+
+ggplot(mpa3_all_pca_values_rs_pc, aes(PC1, PC2, fill = Percent_neg, shape = Time_period)) +
+  geom_point(size = 2, color = "black") +
+     scale_fill_viridis_c(option = "C") +
+     scale_shape_manual(values = c(21, 24, 22, 23, 23)) +
+     # stat_ellipse() +
+     # xlab(paste(xaxis, " - ", exp_var_pc1)) +
+     # ylab(paste(yaxis, " - ", exp_var_pc2)) +
+     theme_minimal(base_size = 16) +
+     theme(text = element_text(size=16)) +
+     theme(legend.title = element_blank(),
+           legend.key.size = unit(2,"mm"),
+           legend.text = element_text(size = 6)) + 
+     theme(legend.position = "top") +
+     ggtitle("") + theme(plot.title = element_text(size = 10))
+
+
+
+```
+
 
 ```{r, eval = F}
 # linear modeling to control for GC content along PC2
@@ -955,7 +1168,7 @@ residuals_pc2_plot_bi
 
 ## Middenbeemster samples only
 ```{r pca_species_mid_pc12}
-mpa3_species_decontam_unfilt <- mpa3_species_decontam %>%
+mpa3_species_decontam_unfilt_mid <- mpa3_species_decontam %>%
   select(-one_of(outliers_mpa3)) %>%
   select(-one_of(poor_samples_mpa3)) %>%
   select(matches("Species|MID|CMB")) %>%
@@ -966,10 +1179,10 @@ mpa3_species_decontam_unfilt <- mpa3_species_decontam %>%
 
 # prepare to run a PCA
 # check the number of components to retain by tuning the PCA
-mixOmics::tune.pca(mpa3_species_decontam_unfilt, logratio = 'CLR')
+mixOmics::tune.pca(mpa3_species_decontam_unfilt_mid, logratio = 'CLR')
 
 
-malt_otu.pca <- mixOmics::pca(mpa3_species_decontam_unfilt, ncomp = 2, logratio = 'CLR')
+malt_otu.pca <- mixOmics::pca(mpa3_species_decontam_unfilt_mid, ncomp = 2, logratio = 'CLR')
 malt_pca_values <- malt_otu.pca$variates$X %>%
   as.data.frame() %>%
   rownames_to_column("Library_ID") %>%
@@ -981,106 +1194,106 @@ ggplot(malt_pca_values, aes(PC1, PC2, color = Region, shape = Region)) +
 
 # perform and plot a PCA to see how the data cluster
 # by pipe notch presence
-mid_pipe_pc12 <- plot_pca_mid(mpa3_species_decontam_unfilt, "PC1", "PC2", "Pipenotch", "Pipenotch", 3, "Pipe notch")
+mid_pipe_pc12 <- plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Pipenotch", "Pipenotch", 3, "Pipe notch")
 mid_pipe_pc12
 # ggsave("~/Desktop/MID_pca_mid_pipe_pc12.pdf", plot = mid_pipe_pc12, device = "pdf",
 #        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by sex
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC1", "PC2", "Sex", "Pipenotch", 3, "Sex")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Sex", "Pipenotch", 3, "Sex")
 
 # by age
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC1", "PC2", "Age", "Pipenotch", 3, "Age")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Age", "Pipenotch", 3, "Age")
 
 # by presence of periodontal disease
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC1", "PC2", "Periodontal_disease_present", "Pipenotch", 3, "Periodontal disease present")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Periodontal_disease_present", "Pipenotch", 3, "Periodontal disease present")
 
 # by presence of caries
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC1", "PC2", "Caries_present", "Pipenotch", 3, "Caries present")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Caries_present", "Pipenotch", 3, "Caries present")
 
 # by ante-mortem tooth loss
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC1", "PC2", "AMTL", "Pipenotch", 3, "AMTL")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "AMTL", "Pipenotch", 3, "AMTL")
 
 # by supragingival calculus score
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "calc_sup_SI_score", "Pipenotch", 3, "Sup calc SI score")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "calc_sup_SI_score", "Pipenotch", 3, "Sup calc SI score")
 
 # by subgingival calculus score
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "Calc_sub_SI_score", "Pipenotch", 3, "Sub calc SI score")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Calc_sub_SI_score", "Pipenotch", 3, "Sub calc SI score")
 
 # by presence of perioapical lesions
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC1", "PC2", "Periapical_lesions", "Pipenotch", 3, "Periapical lesions")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Periapical_lesions", "Pipenotch", 3, "Periapical lesions")
 
 # by max periodontal disease score
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "Max_Perio_Score", "Pipenotch", 3, "Max perio score")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Max_Perio_Score", "Pipenotch", 3, "Max perio score")
 
 # by periodontal affect score
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "Peridontal_affect_score", "Pipenotch", 3, "Perio affect score")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Peridontal_affect_score", "Pipenotch", 3, "Perio affect score")
 
 # by % antemortem tooth loss
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "%AMTL", "Pipenotch", 3, " % AMTL")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "%AMTL", "Pipenotch", 3, " % AMTL")
 
 # by % positions w/periapical lesions
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "%_positions_perioapical", "Pipenotch", 3, "% positions periapical lesions")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "%_positions_perioapical", "Pipenotch", 3, "% positions periapical lesions")
 
 # by % teeth with caries
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "%teeth_with_caries", "Pipenotch", 3, "% teeth w/ caries")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "%teeth_with_caries", "Pipenotch", 3, "% teeth w/ caries")
 
 # by % teeth with calculus
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "%teeth_with_calc", "Pipenotch", 3, "% teeth w/ calc")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "%teeth_with_calc", "Pipenotch", 3, "% teeth w/ calc")
 
 # by % positions with periodontal disease
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "%_positions_with_Periodontal", "Pipenotch", 3, "% positions w/ PD")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "%_positions_with_Periodontal", "Pipenotch", 3, "% positions w/ PD")
 
 # by minimum number of pipenotches 
-mid_minpipe_pc12 <- plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "Min_no_Pipe_notches", "Pipenotch", 3, "Min # pipe notches")
+mid_minpipe_pc12 <- plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Min_no_Pipe_notches", "Pipenotch", 3, "Min # pipe notches")
 mid_minpipe_pc12
 # ggsave("~/Desktop/MID_pca_mid_minpipe_pc12.pdf", plot = mid_minpipe_pc12, device = "pdf",
 #        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by sequencing depth 
-mid_seqdepth_pc12 <- plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "No_reads_total", "Pipenotch", 3, "Total reads into MetaPhlAn3")
+mid_seqdepth_pc12 <- plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "No_reads_total", "Pipenotch", 3, "Total reads into MetaPhlAn3")
 mid_seqdepth_pc12
 # ggsave("~/Desktop/MID_pca_mid_seqdepth_pc12.pdf", plot = mid_seqdepth_pc12, device = "pdf",
 #        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by sampled tooth site(s)
-mid_tooth_pc12 <- plot_pca_mid(mpa3_species_decontam_unfilt, "PC1", "PC2", "Tooth_location", "Pipenotch", 3, "Tooth location")
+mid_tooth_pc12 <- plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Tooth_location", "Pipenotch", 3, "Tooth location")
 mid_tooth_pc12
 # ggsave("~/Desktop/MID_pca_mid_tooth_pc12.pdf", plot = mid_tooth_pc12, device = "pdf",
 #        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by sampled tooth site(s)
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC1", "PC2", "alt_tooth_location", "Pipenotch", 3, "Tooth location")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "alt_tooth_location", "Pipenotch", 3, "Tooth location")
 
 # by mg of extracted calculus
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "Calculus_extracted_mg", "Pipenotch", 3, "Weight of extracted calculus")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Calculus_extracted_mg", "Pipenotch", 3, "Weight of extracted calculus")
 
 # by [DNA] after extraction per mg of calculus extracted
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "extract_conc_ng/mg", "Pipenotch", 3, "DNA extract concentration (ng/mg)")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "extract_conc_ng/mg", "Pipenotch", 3, "DNA extract concentration (ng/mg)")
 
 # by [DNA] after extraction per uL of eluate
-mid_extract_pc12 <- plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "extract_conc_ng/uL", "Pipenotch", 3, "DNA extract concentration (ng/uL)")
+mid_extract_pc12 <- plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "extract_conc_ng/uL", "Pipenotch", 3, "DNA extract concentration (ng/uL)")
 mid_extract_pc12
 # ggsave("~/Desktop/MID_pca_mid_extract_pc12.pdf", plot = mid_extract_pc12, device = "pdf",
 #        scale = 1, width = 9, height = 5, units = c("in"), dpi = 300)
 
 # by soil type
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC1", "PC2", "Soil", "Pipenotch", 3, "Soil type")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "Soil", "Pipenotch", 3, "Soil type")
 
 # by average GC content
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "gc_avg", "Time_period", 3, "Avg. GC content (%)")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "gc_avg", "Time_period", 3, "Avg. GC content (%)")
 
 # by average read length
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "seq_len_avg", "Time_period", 3, "Avg. read length (bp)")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "seq_len_avg", "Time_period", 3, "Avg. read length (bp)")
 
 # by Strep group proportion - sanguinis
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "sanguinis", "Time_period", 3, "Proportion of Sanguinis group")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "sanguinis", "Time_period", 3, "Proportion of Sanguinis group")
 
 # by Strep group proportion - mitis
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "mitis", "Time_period", 3, "Proportion of Mitis group")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC1", "PC2", "mitis", "Time_period", 3, "Proportion of Mitis group")
 
 # with names
-# pca.list <- mixOmics::pca(mpa3_species_decontam_unfilt, ncomp = 3, logratio = 'CLR')
+# pca.list <- mixOmics::pca(mpa3_species_decontam_unfilt_mid, ncomp = 3, logratio = 'CLR')
 # plot_pca_names(pca.list, "PC1", "PC2", "Pipenotch")
 
 # ggsave("05-results.backup/pca_mpa3_species_pc1pc2.pdf", plot = pca_mpa3_species_pc1pc2, device = "pdf",
@@ -1090,82 +1303,82 @@ plot_pca_cont(mpa3_species_decontam_unfilt, "PC1", "PC2", "mitis", "Time_period"
 
 ```{r pca_species_mid_pc32}
 # by sex
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC3", "PC2", "Sex", "Pipenotch", 3, "Sex")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Sex", "Pipenotch", 3, "Sex")
 
 # by age
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC3", "PC2", "Age", "Pipenotch", 3, "Age")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Age", "Pipenotch", 3, "Age")
 
 # by pipe notch presence
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC3", "PC2", "Pipenotch", "Pipenotch", 3, "Pipe notch")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Pipenotch", "Pipenotch", 3, "Pipe notch")
 
 # by presence of periodontal disease
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC3", "PC2", "Periodontal_disease_present", "Pipenotch", 3, "Periodontal disease present")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Periodontal_disease_present", "Pipenotch", 3, "Periodontal disease present")
 
 # by presence of caries
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC3", "PC2", "Caries_present", "Pipenotch", 3, "Caries present")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Caries_present", "Pipenotch", 3, "Caries present")
 
 # by ante-mortem tooth loss
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC3", "PC2", "AMTL", "Pipenotch", 3, "AMTL")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "AMTL", "Pipenotch", 3, "AMTL")
 
 # by supragingival calculus score
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "calc_sup_SI_score", "Pipenotch", 3, "Sup calc SI score")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "calc_sup_SI_score", "Pipenotch", 3, "Sup calc SI score")
 
 # by subgingival calculus score
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "Calc_sub_SI_score", "Pipenotch", 3, "Sub calc SI score")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Calc_sub_SI_score", "Pipenotch", 3, "Sub calc SI score")
 
 # by presence of perioapical lesions
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC3", "PC2", "Periapical_lesions", "Pipenotch", 3, "Periapical lesions")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Periapical_lesions", "Pipenotch", 3, "Periapical lesions")
 
 # by max periodontal disease score
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "Max_Perio_Score", "Pipenotch", 3, "Max perio score")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Max_Perio_Score", "Pipenotch", 3, "Max perio score")
 
 # by periodontal affect score
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "Peridontal_affect_score", "Pipenotch", 3, "Perio affect score")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Peridontal_affect_score", "Pipenotch", 3, "Perio affect score")
 
 # by % antemortem tooth loss
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "%AMTL", "Pipenotch", 3, "% AMTL")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "%AMTL", "Pipenotch", 3, "% AMTL")
 
 # by % positions w/periapical lesions
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "%_positions_perioapical", "Pipenotch", 3, "% positions periapical lesions")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "%_positions_perioapical", "Pipenotch", 3, "% positions periapical lesions")
 
 # by % teeth with caries
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "%teeth_with_caries", "Pipenotch", 3, "% teeth w/ caries")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "%teeth_with_caries", "Pipenotch", 3, "% teeth w/ caries")
 
 # by % teeth with calculus
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "%teeth_with_calc", "Pipenotch", 3, "% teeth w/ calc")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "%teeth_with_calc", "Pipenotch", 3, "% teeth w/ calc")
 
 # by % positions with periodontal disease
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "%_positions_with_Periodontal", "Pipenotch", 3, "% positions w/ PD")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "%_positions_with_Periodontal", "Pipenotch", 3, "% positions w/ PD")
 
 # by minimum number of pipenotches 
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "Min_no_Pipe_notches", "Pipenotch", 3, "Min # pipe notches")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Min_no_Pipe_notches", "Pipenotch", 3, "Min # pipe notches")
 
 # by sequencing depth 
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "No_reads_total", "Pipenotch", 3, "Total reads into MALT")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "No_reads_total", "Pipenotch", 3, "Total reads into MALT")
 
 # by sampled tooth site(s)
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC3", "PC2", "Tooth_location", "Pipenotch", 3, "Tooth location")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Tooth_location", "Pipenotch", 3, "Tooth location")
 
 # by sampled tooth site(s)
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC3", "PC2", "alt_tooth_location", "Pipenotch", 3, "Tooth location")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "alt_tooth_location", "Pipenotch", 3, "Tooth location")
 
 # by mg of extracted calculus
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "Calculus_extracted_mg", "Pipenotch", 3, "Weight of extracted calculus")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Calculus_extracted_mg", "Pipenotch", 3, "Weight of extracted calculus")
 
 # by [DNA] after extraction
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "extract_conc_ng/mg", "Pipenotch", 3, "DNA extract concentration (ng/mg)")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "extract_conc_ng/mg", "Pipenotch", 3, "DNA extract concentration (ng/mg)")
 
 # by [DNA] after extraction per uL of eluate
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "extract_conc_ng/uL", "Pipenotch", 3, "DNA extract concentration (ng/uL)")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "extract_conc_ng/uL", "Pipenotch", 3, "DNA extract concentration (ng/uL)")
 
 # by soil type
-plot_pca_mid(mpa3_species_decontam_unfilt, "PC3", "PC2", "Soil", "Pipenotch", 3, "Soil type")
+plot_pca_mid(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "Soil", "Pipenotch", 3, "Soil type")
 
 # by average GC content
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "gc_avg", "Time_period", 33, "Avg. GC content (%)")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "gc_avg", "Time_period", 33, "Avg. GC content (%)")
 
 # by average read length
-plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "seq_len_avg", "Time_period", 33, "Avg. read length (bp)")
+plot_pca_cont(mpa3_species_decontam_unfilt_mid, "PC3", "PC2", "seq_len_avg", "Time_period", 33, "Avg. read length (bp)")
 
 ```
 
@@ -1173,7 +1386,7 @@ plot_pca_cont(mpa3_species_decontam_unfilt, "PC3", "PC2", "seq_len_avg", "Time_p
 
 ```{r biplots_mid_species}
 
-mpa3_species_decontam_unfilt <- mpa3_species_decontam %>%
+mpa3_species_decontam_unfilt_mid <- mpa3_species_decontam %>%
   select(-one_of(outliers_mpa3)) %>%
   select(-one_of(poor_samples_mpa3)) %>%
   select(matches("Species|MID|CMB")) %>%
@@ -1182,17 +1395,17 @@ mpa3_species_decontam_unfilt <- mpa3_species_decontam %>%
   spread(Species,Counts) %>%
   column_to_rownames("Library_ID")
 
-mpa3_species_decontam_unfilt.pca <- mixOmics::pca(mpa3_species_decontam_unfilt, ncomp = 3, logratio = 'CLR')
-plot(mpa3_species_decontam_unfilt.pca)
+mpa3_species_decontam_unfilt_mid.pca <- mixOmics::pca(mpa3_species_decontam_unfilt_mid, ncomp = 3, logratio = 'CLR')
+plot(mpa3_species_decontam_unfilt_mid.pca)
 
 # Define pipenotch colors for plotting
 Pipenotch_colors = c("#311068","#C83E73")
 Pipenotch_shapes = c(19,17)
 
-mpa3_species_decontam_filtered_nocontrols_biplot_121 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC1", "PC2", "Pipenotch", PC1)
+mpa3_species_decontam_filtered_nocontrols_biplot_121 <- plot_pca_bi(mpa3_species_decontam_unfilt_mid.pca, "PC1", "PC2", "Pipenotch", PC1)
 mpa3_species_decontam_filtered_nocontrols_biplot_121
 
-mpa3_species_decontam_filtered_nocontrols_biplot_122 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC1", "PC2", "Pipenotch", PC2)
+mpa3_species_decontam_filtered_nocontrols_biplot_122 <- plot_pca_bi(mpa3_species_decontam_unfilt_mid.pca, "PC1", "PC2", "Pipenotch", PC2)
 mpa3_species_decontam_filtered_nocontrols_biplot_122
 
 pandoc.table(mpa3_species_decontam_filtered_nocontrols_biplot_121$plot_env$pws_10 %>% arrange(desc(PC1)),
@@ -1225,10 +1438,10 @@ pandoc.table(mpa3_species_decontam_filtered_nocontrols_biplot_122$plot_env$neg_1
              caption = "PC2 negative loadings")
 
 
-mpa3_species_decontam_filtered_nocontrols_biplot_322 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC3", "PC2", "Pipenotch", PC2)
+mpa3_species_decontam_filtered_nocontrols_biplot_322 <- plot_pca_bi(mpa3_species_decontam_unfilt_mid.pca, "PC3", "PC2", "Pipenotch", PC2)
 mpa3_species_decontam_filtered_nocontrols_biplot_322
 
-mpa3_species_decontam_filtered_nocontrols_biplot_323 <- plot_pca_bi(mpa3_species_decontam_unfilt.pca, "PC3", "PC2", "Pipenotch", PC3)
+mpa3_species_decontam_filtered_nocontrols_biplot_323 <- plot_pca_bi(mpa3_species_decontam_unfilt_mid.pca, "PC3", "PC2", "Pipenotch", PC3)
 mpa3_species_decontam_filtered_nocontrols_biplot_323
 
 pandoc.table(mpa3_species_decontam_filtered_nocontrols_biplot_323$plot_env$pws_10 %>% arrange(desc(PC3)),
@@ -1247,7 +1460,81 @@ pandoc.table(mpa3_species_decontam_filtered_nocontrols_biplot_323$plot_env$neg_1
 
 ```
 
+```{r}
+
+pc1 <- mpa3_species_decontam_filtered_nocontrols_biplot_121$plot_env$pws_10 %>% 
+  arrange(desc(PC1)) %>%
+  bind_rows(., mpa3_species_decontam_filtered_nocontrols_biplot_121$plot_env$neg_10 %>% 
+  arrange(PC1)) %>%
+  select(Taxon, PC1)
+
+fwrite(pc1, "./05-results.backup/mpa3_pc1_species_list.tsv", quote = F, sep = "\t")
+
+```
 
 
+```{r palaeofeces_gc}
+
+palaeofeces <- fread("~/archgen/microbiome_calculus/smoking_calculus/04-analysis/gut_gc/copevo_gc_table.tsv") %>%
+  mutate(Sample_type = "palaeofeces") %>%
+  filter(str_detect(V1, "_1.gc.tsv")) %>%
+  bind_rows(fread("~/archgen/microbiome_calculus/smoking_calculus/04-analysis/gut_gc/pub_pal_gc_list.tsv") %>%
+  mutate(Sample_type = "pub_palaeofeces")) %>%
+  bind_rows(fread("~/archgen/microbiome_calculus/smoking_calculus/04-analysis/gut_gc/pubData_gc_list.tsv") %>%
+  mutate(Sample_type = "pub_mod")) %>%
+  bind_rows(fread("~/archgen/microbiome_calculus/smoking_calculus/04-analysis/gut_gc/fta_gc_table.tsv") %>%
+  mutate(Sample_type = "fta_cards")) %>%
+  rename(Library = 1,
+        Avg_GC = 2) %>%
+  mutate(Library = str_replace_all(Library, ".gc.tsv", "")) %>%
+  separate(Library, into = c("folder","Library_ID"), sep = "/") %>%
+  select(-folder)
+
+palaeofeces %>% group_by(Sample_type) %>% summarize(avg_GC = mean(Avg_GC), std_gc = sd(Avg_GC))
+
+```
+
+```{r palaeofeces_plot}
+
+ggplot(palaeofeces, aes(x = Sample_type, y = Avg_GC, fill = Sample_type)) + 
+  ## add half-violin from {ggdist} package
+  ggdist::stat_halfeye(
+    ## custom bandwidth
+    adjust = .5, 
+    ## adjust height
+    width = .6, 
+    ## move geom to the right
+    justification = -.2, 
+    ## remove slab interval
+    .width = 0, 
+    point_colour = NA
+  ) + 
+  geom_boxplot(
+    width = .12, 
+    ## remove outliers
+    outlier.color = NA, ## `outlier.shape = NA` works as well
+    color = "grey30"
+  ) +
+  ## add dot plots from {ggdist} package
+  ggdist::stat_dots(
+    ## orientation to the left
+    side = "left", 
+    ## move geom to the left
+    justification = 1.1, 
+    ## adjust grouping (binning) of observations 
+    binwidth = 0.005
+  ) + 
+  ## remove white space on the left
+  coord_cartesian(xlim = c(1.2, NA)) +
+  theme_minimal(base_size = 14) +
+  # scale_fill_manual(values = Time_period_colors) +
+  theme(axis.text = element_text(size = 14)) +
+  theme(legend.position = "none") +
+  xlab("Sample type") +
+  ylab("Avg. GC (%)") +
+  theme(axis.title.x = element_text(vjust=-1.5)) +
+  theme(axis.title.y = element_text(vjust=1.9))
+
+```
 
 
